--- a/src/MarbleFoxxo/Discord/HTML/server_stats.html
+++ b/src/MarbleFoxxo/Discord/HTML/server_stats.html
@@ -39,7 +39,7 @@
     }
 
     #bottom-section {
-        justify-content: flex-start;
+        justify-content: center;
         align-items: flex-start;
         padding: 1em;
         gap: 2em;
