feat: Show shards on member stats

--- a/src/MarbleFoxxo/Discord/HTML/member_stats.html
+++ b/src/MarbleFoxxo/Discord/HTML/member_stats.html
@@ -121,6 +121,7 @@
         <div id="moderation-section" class="row">
 
             <div class="col section-cols right">
+                <key>⟠:</key>
                 <key>Times Muted:</key>
                 <key>Times Warned:</key>
                 <key>Times Kicked:</key>
@@ -130,6 +131,7 @@
             </div>
 
             <div class="col section-cols left">
+                <val>{{TOTAL_SHARDS}}</val>
                 <val>{{MUTED}}</val>
                 <val>{{WARNED}}</val>
                 <val>{{KICKED}}</val>
