feat: LvlUp command + + lvl stats

--- a/src/MarbleFoxxo/Discord/HTML/member_stats.html
+++ b/src/MarbleFoxxo/Discord/HTML/member_stats.html
@@ -122,6 +122,7 @@
 
             <div class="col section-cols right">
                 <key>⟠:</key>
+                <key>Level:</key>
                 <key>Times Muted:</key>
                 <key>Times Warned:</key>
                 <key>Times Kicked:</key>
@@ -132,6 +133,7 @@
 
             <div class="col section-cols left">
                 <val>{{TOTAL_SHARDS}}</val>
+                <val>{{USER_LVL}}</val>
                 <val>{{MUTED}}</val>
                 <val>{{WARNED}}</val>
                 <val>{{KICKED}}</val>
